dev env setup replenish